# food-client-server-demo

./: .gitignore  Food.pro  LICENSE  LICENSE.FUCK  README.md  client.puml  server.puml
FoodClient/: CMakeLists.txt  FoodClient.pro  config.h  image.qrc  main.cpp  mainwidget.cpp  mainwidget.h  order.cpp  order.h  orderform.cpp  orderform.h  orderform.ui  product.cpp  productform.cpp  productform.h  productform.ui  todoform.cpp  todoform.h  todoform.ui  user.cpp  user.h  userform.cpp  userform.h  userform.ui  usertodoform.cpp  usertodoform.h  usertodoform.ui  viewwidget.cpp  viewwidget.h  viewwidget.ui
FoodServer/: CMakeLists.txt  FoodServer.pro  config.h  db.cpp  db.h  discount.cpp  discount.h  foodserver.cpp  foodserver.h  main.cpp  net.cpp  net.h  netio.cpp  netio.h  order.cpp  order.h  product.cpp  product.h  user.cpp  user.h
build-FoodClient-release/: CMakeCache.txt  FoodClient.cbp  Makefile  cmake_install.cmake  image.qrc.depends  qrc_image.cpp
build-FoodClient-release/FoodClient_autogen/: mocs_compilation.cpp
build-FoodClient-release/FoodClient_autogen/EWIEGA46WW/: moc_mainwidget.cpp  moc_orderform.cpp  moc_productform.cpp  (+3 more)
build-FoodServer-release/: CMakeCache.txt  FoodServer.cbp  Makefile  cmake_install.cmake  food.db
build-FoodServer-release/FoodServer_autogen/: mocs_compilation.cpp
report/: food.db  how-to-run.txt
src/: Food.pro
src/FoodClient/: order.cpp  order.h  orderform.cpp  orderform.h  productform.cpp  productform.h  user.h  userform.cpp  userform.ui  viewwidget.ui
uml/: builder.puml  db.puml  server.puml  strategy.puml
可执行文件/: food.db  管理员账号和普通测试账号.txt
可执行文件-静态编译/: food.db
(+6 files in other folders)
